# -spark-dpu

./: .gitignore  .gitmodules  README.md  dpu环境配置.md  host环境配置.md
SparkApps/groupby/: build.sbt
SparkApps/groupby/src/main/scala/: WordCount.scala
SparkApps/reduceby/: build.sbt
SparkApps/reduceby/src/main/scala/: WordCount.scala
SparkBase/: Makefile  pom.xml  scalastyle_config.xml
SparkBase/src/main/java/org/apache/spark/shuffle/mysort/: BypassMergeSortShuffleWriter.java  PackedRecordPointer.java  ShuffleExternalSorter.java  ShuffleInMemorySorter.java  ShuffleSortDataFormat.java  SpillInfo.java  UnsafeShuffleWriter.java
SparkBase/src/main/scala/org/apache/spark/shuffle/mysort/: MysortBlockStoreShuffleReader.scala  MysortExternalSorter.scala  MysortShuffleBlockFetcherIterator.scala  MysortShuffleManager.scala  MysortShuffleWriter.scala
SparkDPU/: README.md  checkstyle.xml  pom.xml
SparkDPU/dma/: CMakeLists.txt  Makefile  dma_copy.txt  dma_copy_core.c  dma_copy_core.h  org_apache_spark_shuffle_aggr_DPDK.cpp  org_apache_spark_shuffle_aggr_DPDK.h
SparkDPU/dma/common/: dma_copy_core.c  dma_copy_core.h  log.c  log.h  types.h
SparkDPU/dma/dpu_test/: dpu_test.c
SparkDPU/dma/src/: org_apache_spark_shuffle_aggr_DPDK.cpp  org_apache_spark_shuffle_aggr_DPDK.h
SparkDPU/ipc/: CMakeLists.txt  Makefile  org_apache_spark_shuffle_aggr_DPDK.c  org_apache_spark_shuffle_aggr_DPDK.h
SparkDPU/ipc/shm/: Makefile  main.c  shminit
SparkDPU/p4/: Makefile  build.sh  main.p4  run.sh
SparkDPU/p4/ptf/: ptfTest.py
SparkDPU/p4/src/: aggregator.p4  header.p4  ibhandler.p4  parser.p4  query.p4  routing.p4  seqchecker.p4
SparkDPU/src/main/java/org/apache/spark/shuffle/aggr/: AGGRBypassShuffleWriter.java  DPDK.java
SparkDPU/src/main/scala/org/apache/spark/shuffle/aggr/: AGGRShuffleBlockResolver.scala  AGGRShuffleFetcher.scala  AGGRShuffleManager.scala  AGGRShuffleReader.scala  AGGRShuffleSerializer.scala  AGGRUtils.scala
SparkDPU/src/main/scala/org/apache/spark/shuffle/aggr/shared/: AGGRSharedShuffleFetcher.scala  (+2 more)
scripts/: compile.sh  run.sh  utils.sh
(+1 files in other folders)
